# python-project-template

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
app/tests/: test__main.py
